Fix logic to clear existing results when new search is triggered. Wrap fields for smaller screens

--- a/src/app/pages/plant-details/plant-details.component.scss
+++ b/src/app/pages/plant-details/plant-details.component.scss
@@ -87,9 +87,12 @@ $desktop-height: 75%;
         display: block;
         width: 100%;
         height: 100%;
-        aspect-ratio: 4 / 3;
         object-fit: cover;
         border-radius: variables.$border-radius;
+
+        &.plant-image {
+            object-fit: scale-down;
+        }
     }
 
     section {
