--- a/src/app/pages/plant-id/plant-id.component.scss
+++ b/src/app/pages/plant-id/plant-id.component.scss
@@ -6,17 +6,10 @@
 :host {
     @include mixins.flexbox(column, center, space-evenly);
     @include mixins.spacing(column-gap, 2);
-    @include mixins.spacing(padding, 2);
     @include mixins.container-style(auto);
     position: relative;
 
-    @include mixins.respond-to("medium") {
-        flex-direction: row;
-        overflow-y: unset;
-    }
-
-    app-plant-id-results,
-    app-plant-id-search-results {
+    app-plant-id-results {
         width: 100%;
 
         @include mixins.respond-to("medium") {
@@ -26,7 +19,14 @@
 
     > div {
         @include mixins.flexbox(column, center);
-        @include mixins.spacing(row-gap, 2);
+        @include mixins.spacing(gap, 2);
+        flex-wrap: wrap;
+
+        &.has-results {
+            flex-direction: row;
+            align-items: baseline;
+            justify-content: center;
+        }
     }
 
     mat-form-field {
@@ -36,20 +36,30 @@
     .image-preview-container {
         @include mixins.spacing(margin-bottom, 2);
         position: relative;
+        @include mixins.spacing(padding-right);
+        @include mixins.spacing(padding-left);
 
         button {
             position: absolute;
-            @include mixins.spacing(top, 0.5);
-            @include mixins.spacing(right, 0.5);
+            @include mixins.spacing(top, 2);
+            @include mixins.spacing(right, 2);
         }
 
         img {
-            width: 15rem;
+            width: clamp(15rem, 100%, 20rem);
             @include mixins.border-standard(true);
         }
     }
 
     input {
         display: none;
+    }
+
+    @include mixins.respond-to("medium") {
+        flex-direction: row;
+        overflow-y: unset;
+
+        > div {
+        }
     }
 }
